Added a new column

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <div class="centered">This is Mandela, Welcome to World!</div>
 
     </div>
+    <div class="column left" style="background-color:#aaa;">
+        <h2>Column 1</h2>
+        <p>Some text..</p>
+    </div>
     
 </body>
 
