--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 <body>
     <div class="bg">
         <div class="centered">This is Mandela, Welcome to World!</div>
-
     </div>
-    <div class="column left" style="background-color:#aaa;">
-        <h2>Column 1</h2>
-        <p>Some text..</p>
-    </div>
+    
+    <div class="row">
+        <div class="column" style="background-color:#aaa;">
+          <h2>Column 1</h2>
+          <p>Some text..</p>
+        </div>
+        <div class="column" style="background-color:#bbb;">
+          <h2>Column 2</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
     
 </body>
 
