--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <div class="bg">
         <div class="centered">This is Mandela, Welcome to World!</div>
     </div>
-    
+
     <div class="row">
-        <div class="column" style="background-color:#aaa;">
-          <h2>Column 1</h2>
-          <p>Some text..</p>
+        <div class="column">
+          <h2>Projects</h2>
+          <p>The repos to the projects I have done are as follows:</p>
+          <ul>
+            <li>Revenue Collection</li>
+            <p>The link to the repo is <a href="url">Revenue Collection</a> Thi is an app the is used to track revenue collcted in a county</p>
+            <li>E-insurance</li>
+            <p>The link to the repo is <a href="url">E-Insurance/a> Thi is an digitized how vehicle insurance certificates are validated through QR cods</p>
+            <li>LPG Scanner</li>
+          </ul>
         </div>
-        <div class="column" style="background-color:#bbb;">
-          <h2>Column 2</h2>
+        <div class="column">
+          <h2>About</h2>
           <p>Some text..</p>
         </div>
       </div>
