Added about section

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
           <p>The repos to the projects I have done are as follows:</p>
           <ul>
             <li>Revenue Collection</li>
-            <p>The link to the repo is <a href="url">Revenue Collection</a> Thi is an app the is used to track revenue collcted in a county</p>
+            <p>Project link is <a href="url">Revenue Collection</a> This is an app the is used to track revenue collcted in a county</p>
             <li>E-insurance</li>
-            <p>The link to the repo is <a href="url">E-Insurance/a> Thi is an digitized how vehicle insurance certificates are validated through QR cods</p>
+            <p>Project link is <a href="url">E-Insurance</a> An app that automates insurance certificates validation and verification. This is to reduce counterfeit certificates</p>
             <li>LPG Scanner</li>
           </ul>
         </div>
         <div class="column">
           <h2>About</h2>
-          <p>Some text..</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
     
