--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="stylesheet/styles.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="url">Home</a>
+    </div>
     <div class="bg">
         <div class="centered">This is Mandela, Welcome to World!</div>
     </div>
