--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="url">Home</a>
+        <a href="index.html">HOME</a>
     </div>
     <div class="bg">
         <div class="centered">This is Mandela, Welcome to World!</div>
     </div>
-
     <div class="row">
         <div class="column">
           <h2>Projects</h2>
@@ -25,11 +24,11 @@
         </div>
         <div class="column">
           <h2>About</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>My name is Faith Mandela. I have a Computer Science degree from JKUAT. I am currently a QE Engineer in Safaricom. Preiously 
+              I have been a developer focussing mainly on Android. I also have some expeience in MySql and PHP. I picked up on DevOps as 
+              an area of multi skilling. This is because I'd like to test products better and perhaps automate the testing by adding the suites 
+              to a pipeline.
+          </p>
         </div>
       </div>
     
